--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="target"></div>
     <!--! -MY JS- -->
     <script src="js/script.js"></script>
 </body>
